test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 15
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2-alpine
        ports:
        - containerPort: 80
        readinessProbe:
          periodSeconds: 1
          httpGet:
            path: /
            port: 8080
