test_deploy_preStop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        lifecycle:
          preStop:
            exec:
              command:
                - nginx123
                - -s
                - quit 
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      - name: envoy
        image: luksa/kubia-ssl-proxy:1.0 
        ports:
        - name: https
          containerPort: 8443
        - name: admin
          containerPort: 9901
        startupProbe:
           httpGet:
             scheme: HTTPS
             path: /
             port: 8443
           failureThreshold: 30
           periodSeconds: 10
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 8443
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
