test_deploy_topologyspread.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    env: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      env: test
  template:
    metadata:
      labels:
        app: nginx
        env: test
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2-alpine
        ports:
        - containerPort: 80
      topologySpreadConstraints:
      - topologyKey: "kubernetes.io/hostname"
        maxSkew: 1
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: nginx
            env: test
