test_pv.yaml
#kind: PersistentVolume
#apiVersion: v1
#metadata:
#  name: my-persistent-volume
#  labels:
#    type: local
#spec:
#  storageClassName: pv-demo
#  capacity:
#    storage: 100Mi
#  accessModes:
#    - ReadWriteOnce
#  hostPath:
#    path: "/mnt/persistent-volume"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html/test
      volumes:
        - name: content
          persistentVolumeClaim:
            claimName: myboot-volumeclaim
