test_rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-dev
  labels:
    app: dev-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: main
        image: luksa/kubectl-proxy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-prod
  labels:
    app: prod-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-app
  template:
    metadata:
      labels:
        app: prod-app
    spec:
      containers:
      - name: main
        image: luksa/kubectl-proxy
