tshoot-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tshoot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tshoot-deployment
  labels:
    app: tshoot
  namespace: tshoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tshoot
  template:
    metadata:
      labels:
        app: tshoot
    spec:
      containers:
      - name: tshoot
        image: nicolaka/netshoot
        command: ["/bin/sh", "-ec", "sleep 100000"]
