test_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  labels:
    app: nginx-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx-1
        image: nginx:1.14.2-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf-1
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
        - name: nginx-conf-1
          configMap:
            name: nginx-conf-1
            items:
              - key: nginx.conf
                path: nginx.conf

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-2
  labels:
    app: nginx-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx-2
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf-2
          mountPath: /etc/nginx/
            #subPath: nginx.conf
          readOnly: true
      volumes:
        - name: nginx-conf-2
          configMap:
            name: nginx-conf-2
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport-1
spec:
  type: NodePort
  selector:
    app: nginx-1
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30210
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport-2
spec:
  type: NodePort
  selector:
    app: nginx-2
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30220

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /1
            pathType: Prefix
            backend:
              service:
                name: nginx-service-nodeport-1
                port:
                  number: 80
          - path: /2
            pathType: Prefix
            backend:
              service:
                name: nginx-service-nodeport-2
                port:
                  number: 80
